# services/api-gateway/docs/swagger.json
@@ -16,6 +16,98 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/alerts": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Fetches all alerts from the Alert Service.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Alerts"
+                ],
+                "summary": "ListAlerts retrieves a list of all alerts for the authenticated user.",
+                "responses": {
+                    "200": {
+                        "description": "List of alerts",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.AlertResponse"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/alerts/{id}/read": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Updates the alert status to read in the Alert Service.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Alerts"
+                ],
+                "summary": "MarkAlertAsRead marks an alert as read.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Alert ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success status",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/data/readings": {
             "post": {
                 "description": "Sends a sensor reading to the data processing service",
@@ -36,7 +128,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.StoreReadingRequest"
+                            "$ref": "#/definitions/types.StoreReadingRequest"
                         }
                     }
                 ],
@@ -191,7 +283,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "string"
+                                "$ref": "#/definitions/types.SensorGroupResponse"
                             }
                         }
                     },
@@ -236,7 +328,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.CreateGroupRequest"
+                            "$ref": "#/definitions/types.CreateGroupRequest"
                         }
                     }
                 ],
@@ -302,7 +394,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/types.SensorGroupResponse"
                         }
                     },
                     "400": {
@@ -371,7 +463,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.UpdateGroupRequest"
+                            "$ref": "#/definitions/types.UpdateGroupRequest"
                         }
                     }
                 ],
@@ -379,7 +471,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/types.SensorGroupResponse"
                         }
                     },
                     "400": {
@@ -504,12 +596,12 @@
                         "required": true
                     },
                     {
-                        "description": "Sensor IDs",
+                        "description": "Sensor IDs to add",
                         "name": "sensors",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.AddSensorsRequest"
+                            "$ref": "#/definitions/types.AddSensorsRequest"
                         }
                     }
                 ],
@@ -517,7 +609,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/types.SensorGroupResponse"
                         }
                     },
                     "400": {
@@ -586,7 +678,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.AddSensorsRequest"
+                            "$ref": "#/definitions/types.AddSensorsRequest"
                         }
                     }
                 ],
@@ -654,7 +746,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handlers.SensorTypeResponse"
+                                "$ref": "#/definitions/types.SensorTypeResponse"
                             }
                         }
                     },
@@ -765,7 +857,7 @@
                     "200": {
                         "description": "Sensor type details",
                         "schema": {
-                            "$ref": "#/definitions/handlers.SensorTypeResponse"
+                            "$ref": "#/definitions/types.SensorTypeResponse"
                         }
                     },
                     "400": {
@@ -961,7 +1053,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handlers.SensorResponse"
+                                "$ref": "#/definitions/types.SensorResponse"
                             }
                         }
                     },
@@ -1003,7 +1095,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.CreateSensorRequest"
+                            "$ref": "#/definitions/types.CreateSensorRequest"
                         }
                     }
                 ],
@@ -1063,7 +1155,7 @@
                     "200": {
                         "description": "Sensor details",
                         "schema": {
-                            "$ref": "#/definitions/handlers.SensorResponse"
+                            "$ref": "#/definitions/types.SensorResponse"
                         }
                     },
                     "400": {
@@ -1123,7 +1215,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.UpdateSensorRequest"
+                            "$ref": "#/definitions/types.UpdateSensorRequest"
                         }
                     }
                 ],
@@ -1483,7 +1575,27 @@
         }
     },
     "definitions": {
-        "handlers.AddSensorsRequest": {
+        "handlers.UserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.AddSensorsRequest": {
             "type": "object",
             "properties": {
                 "sensor_ids": {
@@ -1494,7 +1606,33 @@
                 }
             }
         },
-        "handlers.CreateGroupRequest": {
+        "types.AlertResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "is_read": {
+                    "type": "boolean"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "rule_id": {
+                    "type": "integer"
+                },
+                "sensor_id": {
+                    "type": "integer"
+                },
+                "triggered_at": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "types.CreateGroupRequest": {
             "type": "object",
             "properties": {
                 "color": {
@@ -1517,7 +1655,7 @@
                 }
             }
         },
-        "handlers.CreateSensorRequest": {
+        "types.CreateSensorRequest": {
             "type": "object",
             "properties": {
                 "description": {
@@ -1534,7 +1672,45 @@
                 }
             }
         },
-        "handlers.SensorResponse": {
+        "types.SensorGroupResponse": {
+            "type": "object",
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "sensor_count": {
+                    "type": "integer"
+                },
+                "sensors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.SensorResponse"
+                    }
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "types.SensorResponse": {
             "type": "object",
             "properties": {
                 "active": {
@@ -1559,14 +1735,14 @@
                     "type": "string"
                 },
                 "sensor_type": {
-                    "$ref": "#/definitions/handlers.SensorTypeResponse"
+                    "$ref": "#/definitions/types.SensorTypeResponse"
                 },
                 "updated_at": {
                     "type": "string"
                 }
             }
         },
-        "handlers.SensorTypeResponse": {
+        "types.SensorTypeResponse": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -1598,7 +1774,7 @@
                 }
             }
         },
-        "handlers.StoreReadingRequest": {
+        "types.StoreReadingRequest": {
             "type": "object",
             "properties": {
                 "sensor_id": {
@@ -1612,7 +1788,7 @@
                 }
             }
         },
-        "handlers.UpdateGroupRequest": {
+        "types.UpdateGroupRequest": {
             "type": "object",
             "properties": {
                 "color": {
@@ -1635,7 +1811,7 @@
                 }
             }
         },
-        "handlers.UpdateSensorRequest": {
+        "types.UpdateSensorRequest": {
             "type": "object",
             "properties": {
                 "active": {
@@ -1652,26 +1828,6 @@
                 },
                 "sensor_type_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "handlers.UserResponse": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "first_name": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "last_name": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         }
